syntax = "proto3";

package stark.code;

option go_package = "gitlab.com/mcuc/monorepo/backend/stark/pkg/code;stark";

enum Code {
  // Google GRPC codes
  // import "google.golang.org/grpc/codes"
  OK = 0;
  CANCELLED = 1;
  UNKNOWN = 2;
  INVALID_ARGUMENT = 3;
  DEADLINE_EXCEEDED = 4;
  NOT_FOUND = 5;
  ALREADY_EXISTS = 6;
  PERMISSION_DENIED = 7;
  RESOURCE_EXHAUSTED = 8;
  FAILED_PRECONDITION = 9;
  ABORTED = 10;
  OUT_OF_RANGE = 11;
  UNIMPLEMENTED = 12;
  INTERNAL = 13;
  UNAVAILABLE = 14;
  DATA_LOSS = 15;
  UNAUTHENTICATED = 16;
  CLOSE_GOING_AWAY = 1001;

  BEGIN = 30000;

  BANK_BEGIN = 30100;
  BANK_NOT_FOUND_MERCHANT = 30101;
  BANK_EXISTED = 30102;
  BANK_INVALID = 30103;
  BANK_EMPTY = 30104;
  BANK_ACCOUNT_EXISTED = 30105;
  BANK_ACCOUNT_ID_EXISTED = 30106;
  BANK_ACCOUNT_NUMBER_INVALID = 30107;
  BANK_ACCOUNT_NAME_INVALID = 30108;
  BANK_ACCOUNT_BALANCE_INVALID = 30109;
  BANK_END = 30199;

  EWALLET_BEGIN = 30200;
  EWALLET_EXISTED = 30201;
  EWALLET_INVALID = 30202;
  EWALLET_EMPTY = 30203;
  EWALLET_NOT_FOUND_MERCHANT = 30204;
  EWALLET_ACCOUNT_ID_EXISTED = 30205;
  EWALLET_ACCOUNT_EXISTED = 30206;
  EWALLET_ACCOUNT_NAME_INVALID = 30207;
  EWALLET_PHONE_NUMBER_INVALID = 30208;
  EWALLET_ACCOUNT_BALANCE_INVALID = 30209;
  EWALLET_END = 30299;

  PAYMENT_BEGIN = 30300;
  PAYMENT_CODE_INVALID = 30301;
  TELCO_CHARGE_CARD_PROVIDER_EMPTY = 30302;
  MERCHANT_USER_BANK_ACCOUNT_INVALID = 30303;
  TELCO_GET_CARD_PROVIDER_EMPTY = 30304;
  PAYMENT_END = 30399;

  STATISTIC_BEGIN = 30400;

  STATISTIC_END = 30499;

  END = 39999;
}
